# simple-predicates-rs

./: .gitignore  Cargo.toml  readme.md
src/: expr.rs  hash.rs  lib.rs  tests.rs  vec.rs
